--- a/css/styles.css
+++ b/css/styles.css
@@ -82,11 +82,28 @@ p {
     color: #2e2f42;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menu .nav-menu-link:hover,
 .nav-menu .nav-menu-link:focus {
-    color:#404bbf;
+    color: #404bbf;
+}
+
+.current {
+position: relative;
+color: #404bbf;
+}
+
+.current::after {
+content: "";
+position: absolute;
+background-color: #404bbf;
+border-radius: 2px;
+height: 4px;
+width: 100%;
+left: 0;
+bottom: -1px;
 }
 
 
@@ -104,6 +121,7 @@ p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-menu .address-menu-link:hover,
@@ -112,10 +130,16 @@ p {
 }
 
 
-.hero-sec {
+.hero-section {
     padding-top: 188px;
     padding-bottom: 188px;
-    background-color: #2e2f42;
+    /* max-width: 1440px; */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.jpg);
+    /* background-color: #2e2f42; */
+
 }
 
 .hero-heading {
@@ -183,6 +207,24 @@ p {
     width: calc((100% - 2 * 24px) / 3);
 }
 
+/* .social-block-icon {
+    fill: #f4f4fd;
+} */
+
+
+.solution-section-img {
+    border: 1px solid #8e8f99;
+    background: #f4f4fd;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+
+}
+
 /* Our Team section */
 
 .our-team {
@@ -197,6 +239,7 @@ p {
 .person-details {
     padding-top: 32px;
     padding-bottom: 32px;
+    
 }
 
 .team-list {
@@ -210,6 +253,8 @@ p {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
     width:calc((100% - 3 * 24px) / 4);
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        border-radius: 0 0 4px 4px;
  }
 
 .team-list-image {
@@ -231,7 +276,53 @@ p {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
+
+/* .person-social-block {
+    display:flex;
+    gap: 24px;
+    width: calc((100% - 3 * 24px) / 4);;
+    justify-content: space-between;
+    text-align: center;
+} */
+
+
+.person-social-list {
+    display: flex;
+    gap: 24px;
+    display: flex;
+    justify-content: center;
+}
+
+.social-block-item {
+    width: 40px;
+    height: 40px;
+}
+
+.social-icon-link {
+    display: flex;
+    widows: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.svg-icon {
+    fill: #f4f4fd;
+}
+
+.social-icon-link:hover {
+     background-color: #404bbf;
+    }
+    
+.social-icon-link:focus {
+    background-color: #404bbf;
+    }
+
 
 /* Portfolio section */
 
@@ -265,6 +356,9 @@ p {
     display: block;
     background-color: #4d5ae5;
 }
+
+
+
 
 .app-details {
     padding: 32px 16px;
