--- a/css/styles.css
+++ b/css/styles.css
@@ -350,15 +350,30 @@ bottom: -1px;
 
 .portfolio-list-item {
     width: calc((100% - 2 * 24px) / 3);
+
+.overlay {
+    position: absolute;
+    padding: 8px;
+    background-color: #3f51b5;
+    color: #fff;
+    font-family: sans-serif;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 250ms ease-in-out;
+    transform: translateY(100%);
+    position: relative;
+        overflow: hidden;
 }
 
+.portfolio-list-item:hover .overlay {
+    transform: translateY(0);
+}
 .portfolio-list-image {
     display: block;
     background-color: #4d5ae5;
 }
-
-
-
 
 .app-details {
     padding: 32px 16px;
