--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto", sans-serif;
     background-color: #fff;
-    color:#434455;
+    color: #434455;
 }
 
 ul {
@@ -71,7 +71,7 @@ p {
 }
 
 .accent {
-    color:#2e2f42;
+    color: #2e2f42;
 }
 
 .nav-menu-link {
@@ -91,19 +91,19 @@ p {
 }
 
 .current {
-position: relative;
-color: #404bbf;
+    position: relative;
+    color: #404bbf;
 }
 
 .current::after {
-content: "";
-position: absolute;
-background-color: #404bbf;
-border-radius: 2px;
-height: 4px;
-width: 100%;
-left: 0;
-bottom: -1px;
+    content: "";
+    position: absolute;
+    background-color: #404bbf;
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
+    left: 0;
+    bottom: -1px;
 }
 
 
@@ -111,6 +111,7 @@ bottom: -1px;
     font-style: normal;
     margin-left: auto;
 }
+
 .address-menu {
     display: flex;
     gap: 40px;
@@ -239,7 +240,7 @@ bottom: -1px;
 .person-details {
     padding-top: 32px;
     padding-bottom: 32px;
-    
+
 }
 
 .team-list {
@@ -252,16 +253,16 @@ bottom: -1px;
 .team-list-item {
     background-color: #fff;
     border-radius: 0 0 4px 4px;
-    width:calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 3 * 24px) / 4);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-        border-radius: 0 0 4px 4px;
- }
+    border-radius: 0 0 4px 4px;
+}
 
 .team-list-image {
     display: block;
- }
+}
 
- .team-list-heading {
+.team-list-heading {
     text-align: center;
     margin-bottom: 8px;
     font-weight: 500;
@@ -269,7 +270,7 @@ bottom: -1px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
- }
+}
 
 .team-list-text {
     text-align: center;
@@ -316,12 +317,12 @@ bottom: -1px;
 }
 
 .social-icon-link:hover {
-     background-color: #404bbf;
-    }
-    
+    background-color: #404bbf;
+}
+
 .social-icon-link:focus {
     background-color: #404bbf;
-    }
+}
 
 
 /* Portfolio section */
@@ -331,13 +332,13 @@ bottom: -1px;
     padding-bottom: 120px;
 }
 
-.portfolio-list{
+.portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 48px 24px;
 }
 
-.section-heading{
+.section-heading {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
@@ -348,28 +349,49 @@ bottom: -1px;
     margin-bottom: 72px;
 }
 
+/* !!!! */
+
 .portfolio-list-item {
     width: calc((100% - 2 * 24px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.overlay {
+.portfolio-list-item:hover {
+    box-shadow: 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.overlay-img {
+position: relative;
+overflow: hidden;
+}
+
+
+
+.portfolio-list-item:hover .overlay-p {
+    transform: translateY(0%);
+}
+
+.overlay-p {
     position: absolute;
-    padding: 8px;
-    background-color: #3f51b5;
-    color: #fff;
-    font-family: sans-serif;
     top: 0;
-    left: 0;
-    width: 100%;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
     height: 100%;
-    transition: transform 250ms ease-in-out;
+    width: 100%;
     transform: translateY(100%);
-    position: relative;
-        overflow: hidden;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-item:hover .overlay {
-    transform: translateY(0);
-}
+
+/* !!!!! */
+
 .portfolio-list-image {
     display: block;
     background-color: #4d5ae5;
@@ -429,7 +451,7 @@ bottom: -1px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-bottom: 16px;    
+    margin-bottom: 16px;
 }
 
 .accent-footer {
