--- a/css/styles.css
+++ b/css/styles.css
@@ -208,11 +208,6 @@ p {
     width: calc((100% - 2 * 24px) / 3);
 }
 
-/* .social-block-icon {
-    fill: #f4f4fd;
-} */
-
-
 .solution-section-img {
     border: 1px solid #8e8f99;
     background: #f4f4fd;
@@ -280,15 +275,6 @@ p {
     margin-bottom: 8px;
 }
 
-/* .person-social-block {
-    display:flex;
-    gap: 24px;
-    width: calc((100% - 3 * 24px) / 4);;
-    justify-content: space-between;
-    text-align: center;
-} */
-
-
 .person-social-list {
     display: flex;
     gap: 24px;
@@ -349,8 +335,6 @@ p {
     margin-bottom: 72px;
 }
 
-/* !!!! */
-
 .portfolio-list-item {
     width: calc((100% - 2 * 24px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -363,8 +347,8 @@ p {
 }
 
 .overlay-img {
-position: relative;
-overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 
@@ -388,9 +372,6 @@ overflow: hidden;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-/* !!!!! */
 
 .portfolio-list-image {
     display: block;
@@ -435,12 +416,16 @@ overflow: hidden;
 
 /* Footer */
 
+.page-footer-container {
+    display: flex;
+        align-items: baseline;
+}
+
 .page-footer {
     background-color: #2e2f42;
     padding-top: 100px;
     padding-bottom: 100px;
 }
-
 
 .footer-logo {
     display: inline-block;
@@ -465,4 +450,49 @@ overflow: hidden;
     letter-spacing: 0.02em;
     color: #f4f4fd;
     max-width: 264px;
+}
+
+
+.footer-logo-container {
+    margin-right: 120px;
+}
+
+.social-heading {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.social-items {
+    display: flex;
+    gap: 16px;
+}
+
+.social-item {
+    width: 40px;
+    height: 40px;
+}
+
+.social-link {display: flex;
+    widows: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
+
+.social-link:hover {
+    background-color: #31d0aa;
+}
+    
+.social-link:focus {
+    background-color: #31d0aa;
+}
+
+.social-icon {
+    fill: #f4f4fd;
 }
