--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ p {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -133,12 +134,11 @@ p {
 .hero-section {
     padding-top: 188px;
     padding-bottom: 188px;
-    /* max-width: 1440px; */
+    max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.jpg);
-    /* background-color: #2e2f42; */
 
 }
 
@@ -168,6 +168,7 @@ p {
     color: #fff;
     background-color: #4d5ae5;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
