--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,7 @@ p {
     background-position: center;
     background-size: cover;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.jpg);
+    margin: 0 auto;
 
 }
 
